; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/tools/extr_pngcp.c_getallopts.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/tools/extr_pngcp.c_getallopts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.display = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.display*, i8*, i32*)* @getallopts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @getallopts(%struct.display* %0, i8* %1, i32* %2) #0 {
  %4 = alloca %struct.display*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  store %struct.display* %0, %struct.display** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.display*, %struct.display** %4, align 8
  %8 = load %struct.display*, %struct.display** %4, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @strlen(i8* %10)
  %12 = call i32 @option_index(%struct.display* %8, i8* %9, i32 %11)
  %13 = load i32*, i32** %6, align 8
  %14 = call i32 @getallopts_(%struct.display* %7, i32 %12, i32* %13, i32 0)
  ret i32 %14
}

declare dso_local i32 @getallopts_(%struct.display*, i32, i32*, i32) #1

declare dso_local i32 @option_index(%struct.display*, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
